--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
       <section class="section service">
         <div class="continer">
           <h1 class="caption">
-            Эффективные решения <br />
-            для вашего бизнеса
+            Эффективные решения
           </h1>
           <button type="button" class="btn-centr">Заказать услугу</button>
         </div>
