--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
         <div class="continer">
           <ul class="aggregate items">
             <li class="detals">
-              <div class="bacground">
-                <img src="./images/Vector.svg" alt="" />
+              <div class="bacground-icons">
+                <svg class="icon-centr" height="" width="">
+                  <use href="./images/symbol-defsnew.svg#icon-satellite"></use>
+                </svg>
               </div>
               <h3 class="headline">Внимание к деталям</h3>
               <p class="text-aggregate">
@@ -75,8 +77,10 @@
               </p>
             </li>
             <li class="detals">
-              <div class="bacground">
-                <img src="./images/Vector1.svg" alt="" />
+              <div class="bacground-icons">
+                <svg class="icon-centr" height="" width="">
+                  <use href="./images/symbol-defsnew.svg#icon-clok"></use>
+                </svg>
               </div>
               <h3 class="headline">Пунктуальность</h3>
               <p class="text-aggregate">
@@ -85,8 +89,10 @@
               </p>
             </li>
             <li class="detals">
-              <div class="bacground">
-                <img src="./images/Vector2.svg" alt="" />
+              <div class="bacground-icons">
+                <svg class="icon-centr" height="" width="">
+                  <use href="./images/symbol-defsnew.svg#icon-laptop"></use>
+                </svg>
               </div>
               <h3 class="headline">Планирование</h3>
               <p class="text-aggregate">
@@ -95,10 +101,11 @@
               </p>
             </li>
             <li class="detals">
-              <div class="bacground">
-                <img src="./images/Vector3.svg" alt="" />
+              <div class="bacground-icons">
+                <svg class="icon-centr" height="" width="">
+                  <use href="./images/symbol-defsnew.svg#icon-astronaut"></use>
+                </svg>
               </div>
-
               <h3 class="headline">Современные технологии</h3>
               <p class="text-aggregate">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -114,16 +121,13 @@
           <h2 class="subject">Чем мы занимаемся</h2>
           <ul class="applications items">
             <li class="content-java">
-              <img src="./images/img1.jpg" width="370" alt="" />
-              <p class="desc">Десктопные приложения</p>
+              <img src="./images/newpicture.jpg" width="370" alt="" />
             </li>
             <li class="content-java">
-              <img src="./images/box2.jpg" width="370" alt="" />
-              <p class="desc">Мобильные приложения</p>
+              <img src="./images/newpicture2.jpg" width="370" alt="" />
             </li>
             <li class="content-java">
-              <img src="./images/img3.jpg" width="370" alt="" />
-              <p class="desc">Дизайнерские решения</p>
+              <img src="./images/newpicture3.jpg" width="370" alt="" />
             </li>
           </ul>
         </div>
@@ -134,8 +138,8 @@
           <h2 class="our-team perfect">Наша команда</h2>
           <ul class="workers items">
             <li class="people">
-              <img src="./images/img.jpg" width="270" alt="" />
-              <h3 class="name-team">Николай Кучеренко</h3>
+              <img src="./images/newteam.jpg" width="270" alt="" />
+              <h3 class="name-team">Игорь Демьяненко</h3>
               <p>Product Designer</p>
               <ul class="items">
                 <li>
@@ -161,8 +165,8 @@
               </ul>
             </li>
             <li class="people">
-              <img src="./images/img(1).jpg" width="270" alt="" />
-              <h3 class="name-team">Ольга Иванова</h3>
+              <img src="./images/newteam2.jpg" width="270" alt="" />
+              <h3 class="name-team">Ольга Репина</h3>
               <p>Frontend Developer</p>
               <ul class="items">
                 <li>
@@ -188,8 +192,8 @@
               </ul>
             </li>
             <li class="people">
-              <img src="./images/img(2).jpg" width="270" alt="" />
-              <h3 class="name-team">Андрей Шевченко</h3>
+              <img src="./images/newteam3.jpg" width="270" alt="" />
+              <h3 class="name-team">Николай Тарасов</h3>
               <p>Marketing</p>
               <ul class="items">
                 <li>
@@ -215,8 +219,8 @@
               </ul>
             </li>
             <li class="people">
-              <img src="./images/img(3).jpg" width="270" alt="" />
-              <h3 class="name-team">Иван Николаев</h3>
+              <img src="./images/newteam4.jpg" width="270" alt="" />
+              <h3 class="name-team">Михаил Ермаков</h3>
               <p>UI Designer</p>
               <ul class="items">
                 <li>
