--- a/index.html
+++ b/index.html
@@ -143,24 +143,37 @@
               <p>Product Designer</p>
               <ul class="items">
                 <li>
-                  <a href="https://www.instagram.com/?hl=ru"
-                    ><img src="./images/instagram 2.svg" alt="инстаграм"
-                  /></a>
+                  <a href="https://www.instagram.com/?hl=ru" class="social-links" >
+                    <svg class="icons-list " height="20" width="20">
+                      <use
+                        href="./images/symbol-defsnew.svg#icon-instagram" >
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/?lang=ru"
-                    ><img src="./images/twitter 1.svg" alt="твитер"
-                  /></a>
+                  <a href="https://twitter.com/?lang=ru" class="social-links">
+                    <svg class="icons-list" height="20" width="20" >
+                      <use href="./images/symbol-defsnew.svg#icon-bird">
+                      </use>
+                    </svg>
+                      </a>
+                   </li>
+                  <li>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-facebook">
+                      </use>
+                    <svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com"
-                    ><img src="./images/facebook 1.svg" alt="феесбук"
-                  /></a>
-                </li>
-                <li>
-                  <a href="https://ru.linkedin.com"
-                    ><img src="./images/linkedin 1.svg" alt="линкед"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-in">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -170,24 +183,36 @@
               <p>Frontend Developer</p>
               <ul class="items">
                 <li>
-                  <a href="https://www.instagram.com/?hl=ru"
-                    ><img src="./images/instagram 2.svg" alt="инстаграм"
-                  /></a>
+                  <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                    <svg class="icons-list " height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/?lang=ru"
-                    ><img src="./images/twitter 1.svg" alt="твитер"
-                  /></a>
+                  <a href="https://twitter.com/?lang=ru" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-bird">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com"
-                    ><img src="./images/facebook 1.svg" alt="феесбук"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-facebook">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://ru.linkedin.com"
-                    ><img src="./images/linkedin 1.svg" alt="линкед"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-in">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -197,24 +222,36 @@
               <p>Marketing</p>
               <ul class="items">
                 <li>
-                  <a href="https://www.instagram.com/?hl=ru"
-                    ><img src="./images/instagram 2.svg" alt="инстаграм"
-                  /></a>
+                  <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                    <svg class="icons-list " height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/?lang=ru"
-                    ><img src="./images/twitter 1.svg" alt="твитер"
-                  /></a>
+                  <a href="https://twitter.com/?lang=ru" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-bird">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com"
-                    ><img src="./images/facebook 1.svg" alt="феесбук"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-facebook">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://ru.linkedin.com"
-                    ><img src="./images/linkedin 1.svg" alt="линкед"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-in">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -224,24 +261,36 @@
               <p>UI Designer</p>
               <ul class="items">
                 <li>
-                  <a href="https://www.instagram.com/?hl=ru"
-                    ><img src="./images/instagram 2.svg" alt="инстаграм"
-                  /></a>
+                  <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                    <svg class="icons-list " height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-instagram">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/?lang=ru"
-                    ><img src="./images/twitter 1.svg" alt="твитер"
-                  /></a>
+                  <a href="https://twitter.com/?lang=ru" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-bird">
+                      </use>
+                    </svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://www.facebook.com"
-                    ><img src="./images/facebook 1.svg" alt="феесбук"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-facebook">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
                 <li>
-                  <a href="https://ru.linkedin.com"
-                    ><img src="./images/linkedin 1.svg" alt="линкед"
-                  /></a>
+                  <a href="https://www.facebook.com" class="social-links">
+                    <svg class="icons-list" height="20" width="20">
+                      <use href="./images/symbol-defsnew.svg#icon-in">
+                      </use>
+                      <svg>
+                  </a>
                 </li>
               </ul>
             </li>
