--- a/index.html
+++ b/index.html
@@ -368,10 +368,33 @@
           </div>
           <div class="footer-messenger calc">
             <p class="footer-text">Присоединяйтесь</p>
-              <a class="footer-icon" href="#"></a>
-              <svg class=>
-              <use href="./images/symbol-defsnew.svg#icon-instagram "></use>
-            </svg>
+              <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                <svg class="icons-list " height="20" width="20">
+                  <use href="./images/symbol-defsnew.svg#icon-instagram">
+                  </use>
+                </svg>
+              </a>
+
+              <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                <svg class="icons-list " height="20" width="20">
+                  <use href="./images/symbol-defsnew.svg#icon-bird">
+                  </use>
+                </svg>
+              </a>
+
+              <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                <svg class="icons-list " height="20" width="20">
+                  <use href="./images/symbol-defsnew.svg#icon-facebook">
+                  </use>
+                </svg>
+              </a>
+
+              <a href="https://www.instagram.com/?hl=ru" class="social-links">
+                <svg class="icons-list " height="20" width="20">
+                  <use href="./images/symbol-defsnew.svg#icon-in">
+                  </use>
+                </svg>
+              </a>
           </div>
           <div class="footer-end calc">
             <p class="footer-text">Подпишитесь на рассылку</p>
