--- a/index.html
+++ b/index.html
@@ -304,32 +304,32 @@
           <h2 class="our-clients centr">Постоянные клиенты</h2>
           <ul class="regular-clients items">
             <a  class="box" href="#">
-            <svg class="icon-box" >
+            <svg class="icon-box firm1" >
               <use href="./images/symbol-defsnew.svg#icon-logo1 ""></use>
             </svg>
           </a>
           <a class="box" href="#">
-            <svg class="icon-box">
+            <svg class="icon-box firm2">
               <use href="./images/symbol-defsnew.svg#icon-logo2 ""></use>
                       </svg>
                     </a>
                     <a class="box" href="#">
-                      <svg class="icon-box">
+                      <svg class="icon-box firm3">
                         <use href="./images/symbol-defsnew.svg#icon-logo3 ""></use>
                                 </svg>
                               </a>
                               <a class="box" href="#">
-                                <svg class="icon-box">
+                                <svg class="icon-box firm4">
                                   <use href="./images/symbol-defsnew.svg#icon-logo4 ""></use>
                                           </svg>
                                         </a>
                                         <a class="box" href="#">
-                                          <svg class="icon-box">
+                                          <svg class="icon-box firm5">
                                             <use href="./images/symbol-defsnew.svg#icon-logo5 ""></use>
                                                     </svg>
                                                   </a>
                                                   <a class="box" href="#">
-                                                    <svg class="icon-box">
+                                                    <svg class="icon-box firm6">
                                                       <use href="./images/symbol-defsnew.svg#icon-logo6 ""></use>
                                                               </svg>
                                                             </a>
@@ -366,14 +366,19 @@
               >
             </address>
           </div>
+
+
           <div class="footer-messenger calc">
-            <p class="footer-text">Присоединяйтесь</p>
+            <div class="position">
+              <p class="footer-text">Присоединяйтесь</p>
               <a href="https://www.instagram.com/?hl=ru" class="social-links">
                 <svg class="icons-list " height="20" width="20">
                   <use href="./images/symbol-defsnew.svg#icon-instagram">
                   </use>
                 </svg>
               </a>
+            </div>
+          
 
               <a href="https://www.instagram.com/?hl=ru" class="social-links">
                 <svg class="icons-list " height="20" width="20">
@@ -396,6 +401,7 @@
                 </svg>
               </a>
           </div>
+
           <div class="footer-end calc">
             <p class="footer-text">Подпишитесь на рассылку</p>
             <button class="button-footer" type="button">Подписаться</button>
