--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul class="auth-nav list items">
             <li class="header-item-second">
               <a href="mailto:info@devstudio.com" class="email">
-                <svg class="icon-envelope" width="16" height="12">
+                <svg class="icon-envelope" >
                   <use href="./images/symbol-defsnew.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -41,7 +41,7 @@
             </li>
             <li class="header-item-second">
               <a href="tel:+380961111111" class="telefon">
-                <svg class="icon-phone" width="16" height="10">
+                <svg class="icon-phone">
                   <use href="./images/symbol-defsnew.svg#icon-phone"></use>
                 </svg>
                 +38 096 111 11 11
@@ -55,7 +55,7 @@
       <section class="section service">
         <div class="continer">
           <h1 class="caption">
-            Эффективные решения
+            Эффективные решения <br> для вашего бизнеса
           </h1>
           <button type="button" class="btn-centr">Заказать услугу</button>
         </div>
@@ -358,12 +358,10 @@
               >
                 г. Киев, пр-т Леси Украинки, 26</a
               >
-              <a class="footer-nav" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-              <a class="footer-nav" href="mailto:info@devstudio.com"
+               <a class="footer-nav" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
+              <a class="footer-nav" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
           </div>
 
@@ -371,14 +369,14 @@
           <div class="footer-messenger calc">
             <div class="position">
               <p class="footer-text">Присоединяйтесь</p>
+           </div>
+          
               <a href="https://www.instagram.com/?hl=ru" class="social-links">
                 <svg class="icons-list " height="20" width="20">
                   <use href="./images/symbol-defsnew.svg#icon-instagram">
                   </use>
                 </svg>
               </a>
-            </div>
-          
 
               <a href="https://www.instagram.com/?hl=ru" class="social-links">
                 <svg class="icons-list " height="20" width="20">
