--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,9 @@
       <div class="continer">
         <nav class="flex-header">
           <a class="header-logo" href="">
-            <span class="logo-header">Web </span
-            ><span class="logotyp">studio</span>
+            <span class="logo-header">Web </span><span class="logotyp">studio</span>
           </a>
-          <ul class="site-nav list">
+          <ul class="site-nav list items">
             <li class="header-item">
               <a href="./index.html" class="nav">Студиa</a>
             </li>
@@ -28,15 +27,23 @@
             </li>
             <li class="header-item"><a href="" class="nav">Контакты</a></li>
           </ul>
-
-          <ul class="auth-nav list">
+    
+          <ul class="auth-nav list items">
             <li class="header-item-second">
-              <a href="mailto:info@devstudio.com" class="email"
-                >info@devstudio.com</a
-              >
+              <a href="mailto:info@devstudio.com" class="email">
+                <svg class="icon-envelope">
+                  <use href="./images/symbol-defsnew.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="header-item-second">
-              <a href="tel:+380961111111" class="telefon">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="telefon">
+                <svg class="icon-phone">
+                  <use href="./images/symbol-defsnew.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </nav>
